worsttweet/static/bootstrap/css/custom-style.css
::-webkit-input-placeholder {
   text-align:center;
}

:-moz-placeholder { /* Firefox 18- */
   text-align:center;  
}

::-moz-placeholder {  /* Firefox 19+ */
   text-align:center;  
}

:-ms-input-placeholder {  
   text-align:center; 
}

#top {
    margin-left: 0px;
    margin-right: 0px;
}

.bs-component{
	position: fixed;
 	top: 0;
	left: 0;
	right: 0;
}

.navbar-default {
	background-color: #E6EAF2;
}

.navbar-brand{
	font-size: 20px;
}

.home-description{
	margin-top: 30px;
}

blockquote.twitter-tweet {
  display: inline-block;
  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
  font-size: 12px;
  font-weight: bold;
  line-height: 16px;
  border-color: #eee #ddd #bbb;
  border-radius: 5px;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
  margin: 10px 5px;
  padding: 0 16px 16px 16px;
  max-width: 468px;
  box-shadow: 10px 10px 8px #55ACEE;
}
 
blockquote.twitter-tweet p {
  font-size: 16px;
  font-weight: normal;
  line-height: 20px;
}
 
blockquote.twitter-tweet a {
  color: inherit;
  font-weight: normal;
  text-decoration: none;
  outline: 0 none;
}
 
blockquote.twitter-tweet a:hover,
blockquote.twitter-tweet a:focus {
  text-decoration: underline;
}

.page-header h1 {
	font-size: 64px;
	padding-top: 30px;
}

.tweet-pic img {
	margin-top: 10px;
	display: inline-block;
}

.tweet-user-name h3 {
	font-size: 16px;
	font-weight: bold;
	margin-top: 10px;
	margin-left: 10px;
	display: inline-block;
	margin-bottom: 5px;
}

.jumbotron {
	background: #EBEBEC;
	padding-top: 5px;
	padding-bottom: 10px;
	background-size: cover;
	background-position: center;
}

.twitter-tweet {
	background: #FFFFFF;
}

.rank-number {
	display: inline-block;
	font-weight: bold;
	font-size: 72px;
	color: #05375D;
	margin-left: 10px;
	margin-top: 0px;
}

.top-search-term{
	display: inline-block;
	font-weight: bold;
	font-size: 36px;
	text-transform: uppercase;
	color: #AD3100;
}

.twitter-tweet .tweet-followers{
	font-style: italic;
	font-size: 100px;
}

.twitter-tweet .tweet-twitter-handle p{
	margin-bottom: 5px;
}

.twitter-tweet .tweet-twitter-handle :hover {
	text-decoration: none;
}

.twitter-tweet .twitter-screen-name {
	margin-bottom: 10px;
	padding-left: 55px;
}

.twitter-tweet .tweet-text {
	margin-bottom: 10px;
}

.vote-button {
	padding-left: 5px;
	padding-right: 5px;
	padding-top: 10px;
	padding-bottom: 10px;
	display: inline-block;
}

.back-to-top h3 a {
	padding-bottom: 10px;
}

.red-button {
	height: 55px;
	border-radius: 10px;
	padding-left: 15px;
	padding-right: 15px;
	margin-top: 5px;
	background-color: #AD3100;
	display: inline-block;
	text-align: center;
	font-size: 18px;
	color: white;
	vertical-align: center;
}

a{
	color: #AD3100;
}

